--- a/templates/index.html
+++ b/templates/index.html
@@ -331,7 +331,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Beans and Capsules</h5>
-                    <p class="card-text text-muted">Freshly roasted beans & premium coffee capsules.</p>
+                    <p class="card-text text-muted">Roasted beans & capsules.</p>
                     <a href="{{ url_for('beans') }}" class="btn btn-modern btn-hover-slide w-100">
                         Browse Roastery <i class="bi bi-arrow-right ms-2"></i>
                     </a>
