--- a/templates/beans.html
+++ b/templates/beans.html
@@ -16,13 +16,7 @@
     <div class="d-flex justify-content-center">
         <ul class="nav nav-pills category-pills">
             <li class="nav-item">
-                <a class="nav-link {% if not subcategory %}active{% endif %}" 
-                   href="{{ url_for('beans') }}">
-                    All Beans
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {% if subcategory == 'coffee-beans' %}active{% endif %}" 
+                <a class="nav-link {% if not subcategory or subcategory == 'coffee-beans' %}active{% endif %}" 
                    href="{{ url_for('beans', subcategory='coffee-beans') }}">
                     <i class="bi bi-box-seam me-1"></i>
                     Coffee Beans
@@ -32,7 +26,7 @@
                 <a class="nav-link {% if subcategory == 'ground-coffee' %}active{% endif %}" 
                    href="{{ url_for('beans', subcategory='ground-coffee') }}">
                     <i class="bi bi-cup-hot me-1"></i>
-                    Ground Coffee
+                    Capsules
                 </a>
             </li>
         </ul>
